--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -57,7 +57,9 @@ App::PropertyVector
 </p>
 <ul><li><b>Data'<i> &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;-&#1076;&#1072;&#1085;&#1085;&#1080;, &#1089;&#1074;&#1098;&#1088;&#1079;&#1072;&#1085;&#1080; &#1089; "&#1092;&#1080;&#1079;&#1080;&#1095;&#1077;&#1089;&#1082;&#1080;&#1090;&#1077;" &#1087;&#1072;&#1088;&#1072;&#1084;&#1077;&#1090;&#1088;&#1080; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072;. &#1057;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; </i>Data</b> &#1086;&#1087;&#1088;&#1077;&#1076;&#1077;&#1083;&#1103;&#1090; &#1089;&#1098;&#1097;&#1077;&#1089;&#1090;&#1074;&#1077;&#1085;&#1080;&#1090;&#1077; &#1093;&#1072;&#1088;&#1072;&#1082;&#1090;&#1077;&#1088;&#1080;&#1089;&#1090;&#1080;&#1082;&#1080; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072;. &#1058;&#1077; &#1089;&#1098;&#1097;&#1077;&#1089;&#1090;&#1074;&#1091;&#1074;&#1072;&#1090; &#1087;&#1086; &#1074;&#1089;&#1103;&#1082;&#1086; &#1074;&#1088;&#1077;&#1084;&#1077;, &#1076;&#1086;&#1088;&#1080; &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; FreeCAD &#1089;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1074; &#1082;&#1086;&#1085;&#1079;&#1086;&#1083;&#1077;&#1085; &#1088;&#1077;&#1078;&#1080;&#1084; &#1080;&#1083;&#1080; &#1082;&#1072;&#1090;&#1086; &#1073;&#1080;&#1073;&#1083;&#1080;&#1086;&#1090;&#1077;&#1082;&#1072;. &#1058;&#1086;&#1074;&#1072; &#1086;&#1079;&#1085;&#1072;&#1095;&#1072;&#1074;&#1072;, &#1095;&#1077; &#1072;&#1082;&#1086; &#1079;&#1072;&#1088;&#1077;&#1076;&#1080;&#1090;&#1077; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090; &#1074; &#1088;&#1077;&#1078;&#1080;&#1084; &#1085;&#1072; &#1082;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;, &#1084;&#1086;&#1078;&#1077;&#1090;&#1077; &#1076;&#1072; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1090;&#1077; &#1088;&#1072;&#1076;&#1080;&#1091;&#1089;&#1072; &#1085;&#1072; &#1082;&#1088;&#1098;&#1075; &#1080;&#1083;&#1080; &#1076;&#1098;&#1083;&#1078;&#1080;&#1085;&#1072;&#1090;&#1072; &#1085;&#1072; &#1083;&#1080;&#1085;&#1080;&#1103;, &#1076;&#1086;&#1088;&#1080; &#1072;&#1082;&#1086; &#1085;&#1077; &#1084;&#1086;&#1078;&#1077;&#1090;&#1077; &#1076;&#1072; &#1074;&#1080;&#1076;&#1080;&#1090;&#1077; &#1088;&#1077;&#1079;&#1091;&#1083;&#1090;&#1072;&#1090;&#1072; &#1085;&#1072; &#1077;&#1082;&#1088;&#1072;&#1085;&#1072;.</li>
 <li><b>View</b> &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;-&#1080;&#1079;&#1075;&#1083;&#1077;&#1076;, &#1089;&#1074;&#1098;&#1088;&#1079;&#1072;&#1085;&#1080; &#1089; "&#1074;&#1080;&#1079;&#1091;&#1072;&#1083;&#1085;&#1080;&#1103;" &#1074;&#1080;&#1076; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072;. &#1057;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; <b>View</b> &#1089;&#1072; &#1089;&#1074;&#1098;&#1088;&#1079;&#1072;&#1085;&#1080; &#1089; <code>ViewObject</code> &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072; &#1080; &#1089;&#1072; &#1076;&#1086;&#1089;&#1090;&#1098;&#1087;&#1085;&#1080; &#1089;&#1072;&#1084;&#1086; &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1075;&#1088;&#1072;&#1092;&#1080;&#1095;&#1085;&#1080;&#1103;&#1090; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1089;&#1082;&#1080; &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089; (GUI) &#1077; &#1079;&#1072;&#1088;&#1077;&#1076;&#1077;&#1085;. &#1058;&#1077; &#1085;&#1077; &#1089;&#1072; &#1076;&#1086;&#1089;&#1090;&#1098;&#1087;&#1085;&#1080;, &#1082;&#1086;&#1075;&#1072;&#1090;&#1086; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072;&#1090;&#1077; FreeCAD &#1074; &#1082;&#1086;&#1085;&#1079;&#1086;&#1083;&#1077;&#1085; &#1088;&#1077;&#1078;&#1080;&#1084; &#1080;&#1083;&#1080; &#1082;&#1072;&#1090;&#1086; &#1073;&#1080;&#1073;&#1083;&#1080;&#1086;&#1090;&#1077;&#1082;&#1072; &#1079;&#1072; &#1076;&#1088;&#1091;&#1075;&#1072; &#1087;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1072;. &#1055;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1080;&#1090;&#1077; &#1074; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072; View &#1085;&#1077; &#1089;&#1077; &#1076;&#1086;&#1073;&#1072;&#1074;&#1103;&#1090; &#1082;&#1098;&#1084; &#1089;&#1090;&#1077;&#1082;&#1072; &#1079;&#1072; &#1086;&#1090;&#1084;&#1103;&#1085;&#1072; &#1080; &#1085;&#1077; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1086;&#1090;&#1084;&#1077;&#1085;&#1077;&#1085;&#1080; &#1080; &#1087;&#1088;&#1077;&#1088;&#1072;&#1073;&#1086;&#1090;&#1077;&#1085;&#1080; &#1089; <a href="../Std_Undo.html" title="Std Undo">Std Undo</a> &#1080; <a href="../Std_Redo.html" title="Std Redo">Std Redo</a>. &#1053;&#1086; &#1077; &#1074;&#1098;&#1079;&#1084;&#1086;&#1078;&#1085;&#1086; &#1076;&#1072; &#1087;&#1088;&#1086;&#1084;&#1077;&#1085;&#1080;&#1090;&#1077; &#1090;&#1086;&#1074;&#1072;, &#1082;&#1072;&#1090;&#1086; &#1079;&#1072;&#1076;&#1072;&#1076;&#1077;&#1090;&#1077; &#1087;&#1072;&#1088;&#1072;&#1084;&#1077;&#1090;&#1098;&#1088;&#1072; <a href="../Fine-tuning.html" title="Fine-tuning">fine-tuning</a> <b>AutoTransactionView</b> &#1085;&#1072; <code>true</code>.</li></ul>
-<h2><span class="mw-headline" id="Basic_properties">Basic properties</span></h2>
+<p><span id="Basic_properties"></span>
+</p>
+<h2><span id=".D0.9E.D1.81.D0.BD.D0.BE.D0.B2.D0.BD.D0.B8_.D1.81.D0.B2.D0.BE.D0.B9.D1.81.D1.82.D0.B2.D0.B0"></span><span class="mw-headline" id="&#1054;&#1089;&#1085;&#1086;&#1074;&#1085;&#1080;_&#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;">&#1054;&#1089;&#1085;&#1086;&#1074;&#1085;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;</span></h2>
 <p>Different objects may have different properties. However, many objects have the same properties because they are derived from the same internal class.
 </p><p>Most geometrical objects that can be created and displayed in the <a href="../3D_View.html" title="3D View">3D View</a> are derived from a <code>Part::Feature</code>. See <a href="../Part_Feature.html" title="Part Feature">Part Feature</a> for the basic properties these objects have.
 </p><p>For 2D geometry, most objects are derived from a <code>Part::Part2DObject</code> (itself derived from a <code>Part::Feature</code>) which is the base of <a href="../Sketch.html" title="Sketch">Sketches</a>, and most <a href="../Draft_Workbench.html" title="Draft Workbench">Draft objects</a>. See <a href="../Part_Part2DObject.html" title="Part Part2DObject">Part Part2DObject</a> for the basic properties these objects have.
@@ -168,13 +170,13 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123173120
+Cached time: 20260123173242
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.106 seconds
-Real time usage: 0.152 seconds
-Preprocessor visited node count: 702/1000000
+CPU time usage: 0.130 seconds
+Real time usage: 0.516 seconds
+Preprocessor visited node count: 703/1000000
 Post&#8208;expand include size: 32306/2097152 bytes
 Template argument size: 12486/2097152 bytes
 Highest expansion depth: 7/100
@@ -184,19 +186,19 @@ Unstrip post&#8208;expand size: 3972/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   38.486      1 -total
- 27.04%   10.406      1 Template:Std_Base_navi/bg
- 25.30%    9.737      3 Template:Navigation_menu_2
- 15.48%    5.957      1 Template:Userdocnavi/bg
- 13.12%    5.049      1 Template:Interface_navi/bg
-  7.42%    2.856      1 Template:PropertyData
-  5.09%    1.959      2 Template:Docnav
-  4.00%    1.540     26 Template:MenuCommand
-  3.98%    1.531      1 Template:Variable
-  3.66%    1.409      1 Template:Code
+100.00%  142.064      1 -total
+ 26.10%   37.075      1 Template:Std_Base_navi/bg
+ 21.94%   31.163      3 Template:Navigation_menu_2
+ 13.35%   18.968      1 Template:Userdocnavi/bg
+ 10.50%   14.920      1 Template:Interface_navi/bg
+  9.82%   13.950      1 Template:PropertyData
+  7.20%   10.233      6 Template:Incode
+  6.18%    8.773      1 Template:Code
+  4.74%    6.730      1 Template:Caption
+  4.45%    6.324      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123173120 and revision id 1743104. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123173241 and revision id 1743106. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
