--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -60,7 +60,7 @@ App::PropertyVector
 <p><span id="Basic_properties"></span>
 </p>
 <h2><span id=".D0.9E.D1.81.D0.BD.D0.BE.D0.B2.D0.BD.D0.B8_.D1.81.D0.B2.D0.BE.D0.B9.D1.81.D1.82.D0.B2.D0.B0"></span><span class="mw-headline" id="&#1054;&#1089;&#1085;&#1086;&#1074;&#1085;&#1080;_&#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;">&#1054;&#1089;&#1085;&#1086;&#1074;&#1085;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;</span></h2>
-<p>Different objects may have different properties. However, many objects have the same properties because they are derived from the same internal class.
+<p>&#1056;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1080;&#1084;&#1072;&#1090; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;. &#1042;&#1098;&#1087;&#1088;&#1077;&#1082;&#1080; &#1090;&#1086;&#1074;&#1072;, &#1084;&#1085;&#1086;&#1075;&#1086; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1080;&#1084;&#1072;&#1090; &#1077;&#1076;&#1085;&#1072;&#1082;&#1074;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;, &#1079;&#1072;&#1097;&#1086;&#1090;&#1086; &#1089;&#1072; &#1087;&#1086;&#1083;&#1091;&#1095;&#1077;&#1085;&#1080; &#1086;&#1090; &#1077;&#1076;&#1080;&#1085; &#1080; &#1089;&#1098;&#1097; &#1074;&#1098;&#1090;&#1088;&#1077;&#1096;&#1077;&#1085; &#1082;&#1083;&#1072;&#1089;.
 </p><p>Most geometrical objects that can be created and displayed in the <a href="../3D_View.html" title="3D View">3D View</a> are derived from a <code>Part::Feature</code>. See <a href="../Part_Feature.html" title="Part Feature">Part Feature</a> for the basic properties these objects have.
 </p><p>For 2D geometry, most objects are derived from a <code>Part::Part2DObject</code> (itself derived from a <code>Part::Feature</code>) which is the base of <a href="../Sketch.html" title="Sketch">Sketches</a>, and most <a href="../Draft_Workbench.html" title="Draft Workbench">Draft objects</a>. See <a href="../Part_Part2DObject.html" title="Part Part2DObject">Part Part2DObject</a> for the basic properties these objects have.
 </p>
@@ -170,12 +170,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123173242
+Cached time: 20260123173317
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.130 seconds
-Real time usage: 0.516 seconds
+CPU time usage: 0.132 seconds
+Real time usage: 0.183 seconds
 Preprocessor visited node count: 703/1000000
 Post&#8208;expand include size: 32306/2097152 bytes
 Template argument size: 12486/2097152 bytes
@@ -186,19 +186,19 @@ Unstrip post&#8208;expand size: 3972/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  142.064      1 -total
- 26.10%   37.075      1 Template:Std_Base_navi/bg
- 21.94%   31.163      3 Template:Navigation_menu_2
- 13.35%   18.968      1 Template:Userdocnavi/bg
- 10.50%   14.920      1 Template:Interface_navi/bg
-  9.82%   13.950      1 Template:PropertyData
-  7.20%   10.233      6 Template:Incode
-  6.18%    8.773      1 Template:Code
-  4.74%    6.730      1 Template:Caption
-  4.45%    6.324      2 Template:Docnav
+100.00%   43.816      1 -total
+ 23.43%   10.266      1 Template:Std_Base_navi/bg
+ 21.02%    9.208      3 Template:Navigation_menu_2
+ 14.86%    6.512      1 Template:Interface_navi/bg
+ 13.43%    5.883      1 Template:Userdocnavi/bg
+  7.74%    3.390      1 Template:PropertyData
+  5.63%    2.466      2 Template:Docnav
+  4.97%    2.178      1 Template:Code
+  4.56%    1.996     26 Template:MenuCommand
+  3.94%    1.726      1 Template:Variable
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123173241 and revision id 1743106. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123173316 and revision id 1743108. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
