--- a/wiki/bg/Property_View.html
+++ b/wiki/bg/Property_View.html
@@ -61,7 +61,7 @@ App::PropertyVector
 </p>
 <h2><span id=".D0.9E.D1.81.D0.BD.D0.BE.D0.B2.D0.BD.D0.B8_.D1.81.D0.B2.D0.BE.D0.B9.D1.81.D1.82.D0.B2.D0.B0"></span><span class="mw-headline" id="&#1054;&#1089;&#1085;&#1086;&#1074;&#1085;&#1080;_&#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;">&#1054;&#1089;&#1085;&#1086;&#1074;&#1085;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;</span></h2>
 <p>&#1056;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080;&#1090;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1080;&#1084;&#1072;&#1090; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;. &#1042;&#1098;&#1087;&#1088;&#1077;&#1082;&#1080; &#1090;&#1086;&#1074;&#1072;, &#1084;&#1085;&#1086;&#1075;&#1086; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1080;&#1084;&#1072;&#1090; &#1077;&#1076;&#1085;&#1072;&#1082;&#1074;&#1080; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;, &#1079;&#1072;&#1097;&#1086;&#1090;&#1086; &#1089;&#1072; &#1087;&#1086;&#1083;&#1091;&#1095;&#1077;&#1085;&#1080; &#1086;&#1090; &#1077;&#1076;&#1080;&#1085; &#1080; &#1089;&#1098;&#1097; &#1074;&#1098;&#1090;&#1088;&#1077;&#1096;&#1077;&#1085; &#1082;&#1083;&#1072;&#1089;.
-</p><p>Most geometrical objects that can be created and displayed in the <a href="../3D_View.html" title="3D View">3D View</a> are derived from a <code>Part::Feature</code>. See <a href="../Part_Feature.html" title="Part Feature">Part Feature</a> for the basic properties these objects have.
+</p><p>&#1055;&#1086;&#1074;&#1077;&#1095;&#1077;&#1090;&#1086; &#1075;&#1077;&#1086;&#1084;&#1077;&#1090;&#1088;&#1080;&#1095;&#1085;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1089;&#1098;&#1079;&#1076;&#1072;&#1076;&#1077;&#1085;&#1080; &#1080; &#1087;&#1086;&#1082;&#1072;&#1079;&#1072;&#1085;&#1080; &#1074; <a href="../bg/3D_View.html" title="3D View/bg">3D View</a>, &#1089;&#1072; &#1087;&#1086;&#1083;&#1091;&#1095;&#1077;&#1085;&#1080; &#1086;&#1090; <code>Part::Feature</code>. &#1042;&#1080;&#1078;&#1090;&#1077; <a href="../Part_Feature.html" title="Part Feature">Part Feature</a> &#1079;&#1072; &#1086;&#1089;&#1085;&#1086;&#1074;&#1085;&#1080;&#1090;&#1077; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1090;&#1077;&#1079;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1080;&#1084;&#1072;&#1090;.
 </p><p>For 2D geometry, most objects are derived from a <code>Part::Part2DObject</code> (itself derived from a <code>Part::Feature</code>) which is the base of <a href="../Sketch.html" title="Sketch">Sketches</a>, and most <a href="../Draft_Workbench.html" title="Draft Workbench">Draft objects</a>. See <a href="../Part_Part2DObject.html" title="Part Part2DObject">Part Part2DObject</a> for the basic properties these objects have.
 </p>
 <h2><span class="mw-headline" id="Context_menu">Context menu</span></h2>
@@ -170,12 +170,12 @@ App::PropertyVector
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260123173317
+Cached time: 20260123173409
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.132 seconds
-Real time usage: 0.183 seconds
+CPU time usage: 0.129 seconds
+Real time usage: 0.187 seconds
 Preprocessor visited node count: 703/1000000
 Post&#8208;expand include size: 32306/2097152 bytes
 Template argument size: 12486/2097152 bytes
@@ -186,19 +186,19 @@ Unstrip post&#8208;expand size: 3972/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   43.816      1 -total
- 23.43%   10.266      1 Template:Std_Base_navi/bg
- 21.02%    9.208      3 Template:Navigation_menu_2
- 14.86%    6.512      1 Template:Interface_navi/bg
- 13.43%    5.883      1 Template:Userdocnavi/bg
-  7.74%    3.390      1 Template:PropertyData
-  5.63%    2.466      2 Template:Docnav
-  4.97%    2.178      1 Template:Code
-  4.56%    1.996     26 Template:MenuCommand
-  3.94%    1.726      1 Template:Variable
+100.00%   51.262      1 -total
+ 16.36%    8.386      1 Template:Std_Base_navi/bg
+ 16.21%    8.308      3 Template:Navigation_menu_2
+ 13.00%    6.663      1 Template:Interface_navi/bg
+ 12.13%    6.220      1 Template:Userdocnavi/bg
+  8.81%    4.516      1 Template:PropertyData
+  7.03%    3.604      6 Template:Incode
+  6.20%    3.176      1 Template:TOCright
+  5.14%    2.637      2 Template:Value
+  5.13%    2.632      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123173316 and revision id 1743108. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:78163-0!canonical and timestamp 20260123173409 and revision id 1743110. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
